Change all testing from iteration 1 to incorporate typescript and in forms of server testing, which request to the server.ts, and check both function and server errors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,5 @@
     "allowJs": true,
     "suppressImplicitAnyIndexErrors": true
   },
-  "exclude": [
-    "**/**_broken.ts"
-  ]
+  "exclude": ["**/**_broken.ts"]
 }
