--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "scripts": {
     "test": "jest --testMatch '**/?(*.)+(test).ts'",
     "test:auth": "jest src/auth.test.ts",
+    "test:channel": "jest src/channel.test.ts",
+    "test:channels": "jest src/channels.test.ts",
+    "test:other": "jest src/other.test.ts",
+    "test:users": "jest src/users.test.ts",
     "tsc": "tsc --project tsconfig.json",
     "lint": "eslint src/**/*.{ts,js}",
     "lint-fix": "eslint --fix src/**/*.{ts,js}",
     "start": "ts-node -T src/server.ts",
-    "start:dev": "nodemon -T src/server.ts",
+    "start:dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts",
     "posttest": "pkill -f 'node_modules/sync-rpc/lib/worker.js' > /dev/null 2>&1"
   },
   "dependencies": {
