--- a/package.json
+++ b/package.json
@@ -1,22 +1,42 @@
 {
   "scripts": {
-    "test:auth": "jest src/auth.test.js",
-    "test:channel": "jest src/channel.test.js",
-    "test:channels": "jest src/channels.test.js",
-    "test:other": "jest src/other.test.js",
-    "test:users": "jest src/users.test.js",
-    "test:all": "jest"
+    "test": "jest --testMatch '**/?(*.)+(test).ts'",
+    "test:auth": "jest src/auth.test.ts",
+    "test:channel": "jest src/channel.test.ts",
+    "test:channels": "jest src/channels.test.ts",
+    "test:other": "jest src/other.test.ts",
+    "test:users": "jest src/users.test.ts",
+    "tsc": "tsc --project tsconfig.json",
+    "lint": "eslint src/**/*.{ts,js}",
+    "lint-fix": "eslint --fix src/**/*.{ts,js}",
+    "start": "ts-node -T src/server.ts",
+    "start:dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts",
+    "posttest": "pkill -f 'node_modules/sync-rpc/lib/worker.js' > /dev/null 2>&1"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.0",
+    "morgan": "^1.10.0",
     "rewire": "^6.0.0",
-    "validator": "^13.9.0"
+    "typescript": "^4.6.3",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.18.10",
-    "@babel/core": "^7.19.1",
-    "@babel/preset-env": "^7.19.1",
-    "eslint": "^8.35.0",
-    "jest": "^28.1.0"
-  },
-  "type": "module"
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/jest": "^27.5.0",
+    "@types/morgan": "^1.9.3",
+    "@types/node": "^17.0.27",
+    "@types/prompt-sync": "^4.1.1",
+    "@types/validator": "^13.7.2",
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
+    "@typescript-eslint/parser": "^5.21.0",
+    "eslint": "^8.25.0",
+    "eslint-plugin-jest": "^26.1.5",
+    "jest": "^28.1.0",
+    "nodemon": "^2.0.21",
+    "sync-request": "^6.1.0",
+    "ts-jest": "^28.0.2",
+    "ts-node": "^10.9.1"
+  }
 }
