--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test:other": "jest src/other.test.ts",
     "test:users": "jest src/users.test.ts",
     "tsc": "tsc --project tsconfig.json",
-    "lint": "eslint src/**/*.{ts,js}",
-    "lint-fix": "eslint --fix src/**/*.{ts,js}",
+    "lint": "eslint src/**/*.ts",
+    "lint-fix": "eslint --fix src/**/*.ts",
     "start": "ts-node -T src/server.ts",
     "start:dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts",
     "posttest": "pkill -f 'node_modules/sync-rpc/lib/worker.js' > /dev/null 2>&1"
