--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "noEmit": true,
     "resolveJsonModule": true,
     "allowJs": true,
-    "suppressImplicitAnyIndexErrors": true
+    "suppressImplicitAnyIndexErrors": true,
   },
-  "exclude": ["**/**_broken.ts"]
+  "include": ["src/**.ts"],
+  "exclude": ["node_modules", "**/**_broken.ts"],
 }
