--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "resolveJsonModule": true,
     "allowJs": true,
     "suppressImplicitAnyIndexErrors": true,
+    "ignoreDeprecations": "5.0"
   },
-  "include": ["src/**.ts"],
-  "exclude": ["node_modules", "**/**_broken.ts"],
+  "exclude": ["**/**_broken.ts", "node_modules/*"]
 }
