--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "dependencies": {
         "cors": "^2.8.5",
         "express": "^4.18.0",
+        "http-errors": "^2.0.0",
+        "middleware-http-errors": "^0.1.1",
         "morgan": "^1.10.0",
         "rewire": "^6.0.0",
         "ts-node": "^10.7.0",
         "typescript": "^4.6.3",
-        "validator": "^13.7.0",
-        "http-errors": "^2.0.0",
-        "middleware-http-errors": "^0.1.1"
+        "validator": "^13.7.0"
     },
     "devDependencies": {
         "@types/cors": "^2.8.12",
@@ -25,7 +25,7 @@
         "@types/http-errors": "^2.0.1",
         "@types/jest": "^27.5.0",
         "@types/morgan": "^1.9.3",
-        "@types/node": "^17.0.27",
+        "@types/node": "^18.15.11",
         "@types/prompt-sync": "^4.1.1",
         "@types/validator": "^13.7.2",
         "@typescript-eslint/eslint-plugin": "^5.21.0",
