--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,19 +6,24 @@ stages:
 before_script:
   - npm install
 
-cache:
-  paths:
-    - node_modules
-
-tests:
+tests with coverage:
   stage: checks
   script:
     - SERVER_LOG=$(mktemp)
-    - npm run start >& $SERVER_LOG &
+    - npm run ts-node-coverage >& $SERVER_LOG &
+    - timeout 10s grep -q "⚡️ Server started on port" <(tail -f $SERVER_LOG) || exit 1
+    - timeout -s SIGINT 180s npm run test || (cat $SERVER_LOG && exit 1)
+    - kill -SIGINT %1
     - sleep 2
     - npm run test src/**.ts
     - kill -SIGINT %1
     - cat $SERVER_LOG
+  coverage: '/All files\s*\|\s*(\d+(?:\.\d+)?)/'
+  artifacts:
+    paths:
+      - coverage/
+    expose_as: Coverage Report
+    expire_in: 1 week
 
 typecheck:
   stage: checks
