[Feature/Chore] Implemented the hashing for the tokens in the functions, and changed all function error to http error

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "cors": "^2.8.5",
+        "crypto": "^1.0.1",
         "express": "^4.18.0",
         "http-errors": "^2.0.0",
         "middleware-http-errors": "^0.1.1",
