[Chore] Include the token in the header section for the server helper function, and update the auth.test to iteration 3

--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "scripts": {
     "test": "jest",
-    "test:auth": "jest src/auth.test.ts",
-    "test:channel": "jest src/channel.test.ts",
-    "test:channels": "jest src/channels.test.ts",
-    "test:other": "jest src/other.test.ts",
-    "test:users": "jest src/users.test.ts",
-    "test:message": "jest src/message.test.ts",
-    "test:dm": "jest src/dm.test.ts",
+    "test:auth": "jest src/tests/auth.test.ts",
+    "test:channel": "jest src/tests/channel.test.ts",
+    "test:channels": "jest src/tests/channels.test.ts",
+    "test:other": "jest src/tests/other.test.ts",
+    "test:users": "jest src/tests/users.test.ts",
+    "test:message": "jest src/tests/message.test.ts",
+    "test:dm": "jest src/tests/dm.test.ts",
     "tsc": "tsc --project tsconfig.json",
     "lint": "eslint src/**/*.{ts,js}",
     "lint-fix": "eslint --fix src/**/*.ts",
