[Chore] Fixed one more lint error

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "test:message": "jest src/tests/message.test.ts",
     "test:dm": "jest src/tests/dm.test.ts",
     "tsc": "tsc --project tsconfig.json",
-    "lint": "eslint src/**/*.{ts,js}",
-    "lint-fix": "eslint --fix src/**/*.ts",
+    "lint": "eslint src/**.ts",
+    "lint-fix": "eslint --fix src/**.ts",
     "start": "ts-node -T src/server.ts",
     "start:dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts",
     "ts-node-coverage": "nyc --reporter=text --reporter=lcov ts-node -T src/server.ts",
