--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.18.0",
+    "googleapis": "^114.0.0",
     "http-errors": "^2.0.0",
     "middleware-http-errors": "^0.1.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22",
     "rewire": "^6.0.0",
     "ts-node": "^10.7.0",
