--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "test:channels": "jest src/tests/channels.test.ts",
     "test:other": "jest src/tests/other.test.ts",
     "test:users": "jest src/tests/users.test.ts",
+    "test:userPhoto": "jest src/tests/userPhoto.test.ts",
     "test:message": "jest src/tests/message.test.ts",
     "test:dm": "jest src/tests/dm.test.ts",
     "tsc": "tsc --project tsconfig.json",
@@ -20,8 +21,9 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.18.0",
-    "googleapis": "^114.0.0",
     "http-errors": "^2.0.0",
+    "image-size": "^1.0.2",
+    "jimp": "^0.22.7",
     "middleware-http-errors": "^0.1.1",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.1",
