--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.18.0",
+    "googleapis": "^115.0.0",
     "http-errors": "^2.0.0",
     "image-size": "^1.0.2",
     "jimp": "^0.22.7",
@@ -29,6 +30,7 @@
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22",
     "rewire": "^6.0.0",
+    "sleep": "^6.3.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3",
     "validator": "^13.7.0"
