[Chore] Added new command int package.json"

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "test:message": "jest src/tests/message.test.ts",
     "test:dm": "jest src/tests/dm.test.ts",
     "test:standup": "jest src/tests/standup.test.ts",
+    "test:admin": "jest src/tests/admin.test.ts",
+    "test:notification": "jest src/tests/notification.test.ts",
+    "test:search": "jest src/tests/search.test.ts",
     "tsc": "tsc --project tsconfig.json",
     "lint": "eslint src/**.ts",
     "lint-fix": "eslint --fix src/**.ts",
